--- a/Proposal/Proposal.tex
+++ b/Proposal/Proposal.tex
@@ -117,8 +117,8 @@
 			\vspace{0,3cm}
 			\text{on} \\
 			\vspace{0,3cm}
-			{\LARGE  \textbf{Design and Implementation of a Demonstrator\\ 
-					for Bidirectional Transformation (BX) Tools}} \\ 
+			{\LARGE  \textbf{A Demonstrator Framework\\ 
+					for Consistency Management Approaches}} \\ 
 			\vspace{1cm}
 			\text{by} \\
 			\vspace{0,3cm}
