Final doc updated: Research work, Related Work

--- a/Final Documentation/Evaluation/Evaluation.tex
+++ b/Final Documentation/Evaluation/Evaluation.tex
@@ -1,5 +1,5 @@
-\section{Evaluation}\label{sec:outcome}
+\section{Evaluation}\label{sec:evaluation}
 \subsection{Discussion and Feedback}\label{subsec:feedback}
-\subsection{Evaluation and Results}\label{subsec:evaluation}  
+\subsection{Evaluation and Results}\label{subsec:results}  
 
 
