--- a/Final Documentation/Introduction/Introduction.tex
+++ b/Final Documentation/Introduction/Introduction.tex
@@ -17,7 +17,7 @@ Bx community has been doing research and development work in many fields like so
 \newline\newline  Although a significant amount of work has been done in this field, some basic problems still remain:
 \begin{itemize}
 	\item {Reachability to relevant communities is not significant due to the absence of a common vocabulary for bx across research disciplines \cite{bx-theoryandappl}. Seminars are still conducted for exchanging ideas in different communities to define a common vocabulary of terms and properties for bx \cite{bx-dagstuhl}.}	
-	\item {Bx tools and their applicability is still not widely known even in the developers' communities. Due to the existing conceptual and practical challenges associated with using bx, bx-tools in building software systems, many developers and researchers are still using non-bx transformation tools to achieve properties which can be easily supported by bx-tools \cite{bx-theoryandappl}.}
+	\item {Bx tools and their applicability is still not widely known even in the developers' communities. Due to the existing conceptual and practical challenges associated with configuring/trying a bx-tool for knowing its potential, using bx, bx-tools in building software systems, many developers and researchers are still using non-bx transformation tools to achieve properties which can be easily supported by bx-tools \cite{bx-theoryandappl}.}
 	\item {Absence of a simple yet interactive bx tool demonstrator to depict the potential of \textit{bidirectional transformation} over preferred non-bx tool demonstrators among developers' and researchers' communities \cite{bx-theoryandappl}.}
 \end{itemize}
 
@@ -48,6 +48,17 @@ Chapter 6 contains the feedback from user groups, evaluation results and learnin
 Last chapter summarizes all the work which was done as part of this thesis and draws useful conclusions followed by future work.
 
 \section{Foundation}\label{sec:foundation}
-In this chapter I will describe some commonly used terms with respect to bx
+In this chapter, I am going to describe some commonly used terminologies with respect to bx so that the reader doesn't have any problem in understanding the further chapters.
+
+As already mentioned, "bx is a technique to maintain consistency(synchronize) between two(or more) related models".
+
+\paragraph{Model}
+\paragraph{Delta}
+\paragraph{State}
+\paragraph{Model Space}
+\paragraph{BX}
+\paragraph{Consistency}
+
+
 
 
