--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -30,6 +30,8 @@
 	
 	\bibitem{share} {\em SHARE - Sharing Hosted Autonomous Research Environments}, [Online]. Available: http://is.ieis.tue.nl/staff/pvgorp/share/
 	
+	\bibitem{wiki-transformation} {\em Wikipedia. "Model transformation."} Retrieved March, 2017, from https://en.wikipedia.org/wiki/Model{\_}transformation.
+	
 	
 \end{thebibliography}
 
