--- a/Final Documentation/HighLevel/HighLevel.tex
+++ b/Final Documentation/HighLevel/HighLevel.tex
@@ -23,7 +23,8 @@ High-Level Architecture diagram of my prototype is given in Figure~\ref{fig:Arch
 	\caption{High Level Architecture Diagram}
 	\label{fig:Architecture_Diagram}
 \end{figure}
-\subsubsection{View (GUI)}\label{subsubsec:view}
+\subsubsection{View}\label{subsubsec:view}
+It contains the entire UI elements and its logic.
 \subsubsection{Controller}\label{subsubsec:controller}
 \subsubsection{Model}\label{subsubsec:model}
 
