--- a/Final Documentation/Design/Design.tex
+++ b/Final Documentation/Design/Design.tex
@@ -1,4 +1,4 @@
-\section{High-Level Concepts}\label{sec:highlevel}
+\section{Design}\label{sec:design}
 In this chapter, I am going to describe all high-level technical details realized during the implementation of the demonstrator. Section \ref{subsec:examples} describes all the examples that I have conceptualized before choosing the final one for the implementation. This is then followed by
 the description of the steps taken for selecting the bx-tool in Section \ref{subsec:bxtoolselection}. Afterwards, Section \ref{subsec:concretedesign} deals with the decisions taken for finalizing the apllication's architecture design.
 \subsection{Choosing an Example}\label{subsec:examples}
