--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -112,7 +112,7 @@
 		%then: create a bastard title
 		\thispagestyle{empty}
 		\begin{center}
-			{\vspace*{170pt}\Large\textbf{A Demonstrator Framework\\ 
+			{\vspace*{170pt}\Large\textbf{A Demonstrator Framework\\[5pt] 
 					for Consistency Management Approaches}}\\[30pt]
 			by\\[15pt]
 			{\large Arjya Shankar Mishra}
@@ -127,7 +127,7 @@
 			\includegraphics[width=12cm]{figures/Logo_Uni_Paderborn}\\
                       
       		\vspace{3cm}
-			{\LARGE  \textbf{A Demonstrator Framework\\ 
+			{\LARGE  \textbf{A Demonstrator Framework\\ [7pt]
 					for Consistency Management Approaches}} \\ 
 			\vspace{0,7cm}
 			{\Large Master's Thesis }\\[6pt]
@@ -136,11 +136,12 @@
 			Degree of\\[6pt]
 			{\Large Master of Science}\\
 			\vspace{30pt}
-			\text{by} \\
+			\text{by} \\[2pt]
 			{\large Arjya Shankar Mishra}\\	
 			\vspace{50pt}
-			Supervisor:\\
-			{\large Jun. Prof. Dr. Anthony Anjorin}\\
+			Supervisors:\\[2pt]
+			{\large Jun. Prof. Dr. Anthony Anjorin}\\[5pt]
+			{\large Prof. Dr. Gregor Engels}\\
 			\vspace{60pt}
 			{Paderborn, \today}
 					
@@ -191,13 +192,13 @@
   
   	\input{Introduction/Introduction}
   	\newpage
+  	\input{Requirements/Requirements}
+  	\newpage
   	\input{RelatedWork/RelatedWork}
   	\newpage
-  	\input{Research/Research}
+  	\input{Design/Design}
   	\newpage
-  	\input{HighLevel/HighLevel}
-  	\newpage
-  	\input{LowLevel/LowLevel}
+  	\input{Implementation/Implementation}
   	\newpage
   	\input{Application/Application}
   	\newpage
