--- a/Final Documentation/Implementation/Implementation.tex
+++ b/Final Documentation/Implementation/Implementation.tex
@@ -1,4 +1,4 @@
-\section{Low-Level Concepts}\label{sec:lowlevel}
+\section{Implementation}\label{sec:implementation}
 
 \subsection{UML Diagrams}\label{subsec:umldiagrams}
 \subsubsection{Component Diagram}\label{subsubsec:component}
