--- a/Final Documentation/Introduction/Introduction.tex
+++ b/Final Documentation/Introduction/Introduction.tex
@@ -8,9 +8,7 @@
 	\item {consistency management between two artifacts by avoiding data loss}
 \end{itemize}
     and many more....
-
-\subsection{Contribution}\label{subsec:contribution}    
-Bx community has been doing research and development work in many fields like software development, database, mathematics and much more to increase awareness and to reach more people \cite{bx-dagstuhl}\cite{bx-grace}. As a result, many kinds of bx tools are being developed, e.g., eMoflon \cite{emoflon-part4}, Echo \cite{echo}. These bx tools are based on various approaches, such as graph transformations, bidirectionalization, update propagations \cite{bx-community} and can be used in different areas of application.
+\newline\newline Bx community has been doing research and development work in many fields like software development, database, mathematics and much more to increase awareness and to reach more people \cite{bx-dagstuhl}\cite{bx-grace}. As a result, many kinds of bx tools are being developed, e.g., eMoflon \cite{emoflon-part4}, Echo \cite{echo}. These bx tools are based on various approaches, such as graph transformations, bidirectionalization, update propagations \cite{bx-community} and can be used in different areas of application.
 
 \subsection{Problem Statement}\label{subsec:probstmt}
 \textit{Bidirectional transformation} is an emerging concept. In the past, many efforts have been made by conducting international workshops, seminars and through experiments conducted by developers / bx community to identify its potential. Also, in addition to the development of bx tools and bx language, benchmarks are being created for bx tools for systematic comparison \cite{benchmark-BX}.
@@ -21,7 +19,7 @@ Bx community has been doing research and development work in many fields like so
 	\item {Absence of a simple yet interactive bx tool demonstrator to depict the potential of \textit{bidirectional transformation} over preferred non-bx tool demonstrators among developers' and researchers' communities \cite{bx-theoryandappl}.}
 \end{itemize}
 
-\subsection{Solution Strategy}\label{subsec:solution}
+\subsection{Solution Idea}\label{subsec:solution}
 To solve the problems as described in Section \ref{subsec:probstmt}, in this thesis, my goals are as follows:
 \begin{itemize} 
 \item {Design and implement an interactive demonstrator.} 
