--- a/Final Documentation/RelatedWork/RelatedWork.tex
+++ b/Final Documentation/RelatedWork/RelatedWork.tex
@@ -1,6 +1,14 @@
 \section{Related Work}\label{sec:relatedwork}
 This chapter sums up all the related work that has been done on bx. Section \ref{subsec:handbook}, \ref{subsec:examplerep}, \ref{subsec:existingdemo} and \ref{subsec:virtualmachines} describe the various ways that bx community and developer's group have tried to make the work done on bx visible to the world. Then, Section \ref{subsec:problem} explains the related problems. 
 \newline\newline Model transformation is a central part of Model-Driven Software Development \cite{bx-grace} \cite{bx-dagstuhl}. Bx community has been constantly doing research and development work in many fields to help people understand and increase awareness about bx. Nowadays, researchers from different areas are actively investigating the use of bx to solve a variety of problems. A lot of work has been done in terms of building usable tools and languages for bx. These tools can be used in various fields, for achieving \textit{bidirectional transformation}. To understand these tools, several handbooks, tutorials and examples have been created so that users and developers can understand the core concepts. 
+\subsection{Existing Demonstrators}\label{subsec:existingdemo}
+Also, we have analyzed an existing demonstrator available along with the test cases of a domain-specific language, BiYacc \cite{biyacc} which is based on BiGUL \cite{bigul}. 
+\newline\newline Being an online demonstrator, a user can try it out instantly and check how it works. It doesn't require any installation or technical expertise to get the example running and also, it makes the features of bx noticeable.
+
+\subsection{Virtual Machines}\label{subsec:virtualmachines}
+Also, we have analyzed a web-based virtual machine, e.g., SHARE \cite{share}. Basically, this is a web portal used for creating and sharing executable research papers and acts as a demonstrator to provide access to tools, softwares, operating systems, etc., which are otherwise a headache to install \cite{share}. 
+\newline\newline This provides the environment that the user requires to execute his/her tool or program. Hence, it reduces the overhead of a user for maintaining and organizing all software framework related stuff and simplify access for end-users.
+
 \subsection{Handbooks \& Tutorials}\label{subsec:handbook}
 As a part of our research, I have analyzed some tutorials and tools and below are my findings.
 \newline\newline Anjorin et al.\cite{emoflon-part4} present the concept for \textit{bidirectional transformation} using Triple Graph Grammars (denoted by "TGG") \cite{tgg}. To demonstrate their core idea and the usage of the tool, they have described an example by transforming one model (source) into another (target) through TGG transformations \cite{tgg}\cite{bx-tgg}. The whole tutorial is about 42 pages long which guides the user to get the example running through a series of steps. These steps include installing \ac{Eclipse}, getting their tool as an Eclipse plugin, setting up the workspace, creating TGG schema and specifying its rule and much more. If the user is able to execute each step correctly, then finally he/she can view the final output. It took me 4 days to get the tool up and running.
@@ -10,15 +18,7 @@ As a part of our research, I have analyzed some tutorials and tools and below ar
 A rich set of bx examples repository \cite{bx-examples} has been created based on many research papers. These examples cover a diverse set of areas such as business process management, software modeling, data structures, database, mathematics and much more.
 \newline\newline A user can find relevant information about the examples on the respective web pages. Some of the examples are very well documented along with class diagrams, activity diagrams, object diagrams etc. and source code of a few examples are available as well.
 
-\subsection{Existing Demonstrators}\label{subsec:existingdemo}
-Also, we have analyzed an existing demonstrator available along with the test cases of a domain-specific language, BiYacc \cite{biyacc} which is based on BiGUL \cite{bigul}. 
-\newline\newline Being an online demonstrator, a user can try it out instantly and check how it works. It doesn't require any installation or technical expertise to get the example running and also, it makes the features of bx noticeable.
- 
-\subsection{Virtual Machines}\label{subsec:virtualmachines}
-Also, we have analyzed a web-based virtual machine, e.g., SHARE \cite{share}. Basically, this is a web portal used for creating and sharing executable research papers and acts as a demonstrator to provide access to tools, softwares, operating systems, etc., which are otherwise a headache to install \cite{share}. 
-\newline\newline This provides the environment that the user requires to execute his/her tool or program. Hence, it reduces the overhead of a user for maintaining and organizing all software framework related stuff and simplify access for end-users.
-	
-\subsection{Related Problems}\label{subsec:problem}
+\subsection{Discussion}\label{subsec:discussion}
 Some associated problems that I found with the above paragraphs are as follows: 
 
 \begin{itemize}
