--- a/Final Documentation/Summary/Summary.tex
+++ b/Final Documentation/Summary/Summary.tex
@@ -1,4 +1,4 @@
-\section{Summary and Way Forward}\label{sec:timeplan}
+\section{Summary and Future Work}\label{sec:timeplan}
 \subsection{Conclusion}\label{subsec:conclusion}
 \subsection{Future Work}\label{subsec:futurework}
 
